Add /merge route, refactor /append route
